[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/UI/MainMenu/TutorialPopup.gd" type="Script" id=1]
[ext_resource path="res://assets/Fonts/MontserratBold-DOWZd.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/UI/MainMenu/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://src/UI/MainMenu/GameModeSelection.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Fonts/BigFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://src/UI/BackgroundLayer.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/UI/Settings/Components/SettingsBtn.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 80.0
margin_top = 40.0
margin_right = -80.0
margin_bottom = -40.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 864.0
margin_bottom = 100.0

[node name="RichTextLabel" type="Label" parent="VBoxContainer/CenterContainer"]
margin_left = 163.0
margin_right = 701.0
margin_bottom = 100.0
rect_min_size = Vector2( 500, 100 )
custom_fonts/font = SubResource( 1 )
text = "WORD TETRIS"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 864.0
margin_bottom = 520.0
size_flags_vertical = 3
custom_constants/separation = 35
alignment = 1

[node name="Start" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_left = 388.0
margin_top = 98.0
margin_right = 475.0
margin_bottom = 132.0
size_flags_horizontal = 6
custom_fonts/font = ExtResource( 5 )
text = "START"

[node name="Tutorial" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_left = 363.0
margin_top = 167.0
margin_right = 500.0
margin_bottom = 194.0
size_flags_horizontal = 6
text = "HOW TO PLAY"

[node name="Settings" parent="VBoxContainer/VBoxContainer" instance=ExtResource( 7 )]
margin_left = 391.0
margin_top = 229.0
margin_right = 473.0
margin_bottom = 256.0
size_flags_vertical = 1

[node name="Quit" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_left = 407.0
margin_top = 291.0
margin_right = 456.0
margin_bottom = 318.0
size_flags_horizontal = 6
text = "Quit"

[node name="TutorialPopup" type="AcceptDialog" parent="."]
margin_left = 152.0
margin_top = 88.0
margin_right = 648.0
margin_bottom = 424.0
window_title = "How to play"
dialog_text = "Use blocks to write as many words as you can!

{controls_tutorial}

Writing a valid word will clear up tiles in your board.
The game is over when your board is full, or when your
block queue is full."
script = ExtResource( 1 )

[node name="ResourcePreloader" type="ResourcePreloader" parent="."]
resources = [ PoolStringArray( "GameModeSelection" ), [ ExtResource( 4 ) ] ]

[node name="BackgroundLayer" parent="." instance=ExtResource( 6 )]

[connection signal="pressed" from="VBoxContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
